css/configurable-omega.styles.css
/* ... */
          #block-superfish-1 #superfish-1-accordion li.active-trail > a:hover, #block-superfish-1 #superfish-1-accordion li.active-trail:nth-child(even) > a:hover {
            background-color: #0f753b; }
      #block-superfish-1 #superfish-1-accordion li.menuparent > a.menuparent:before {
        content: "\f0da";
        font-family: "FontAwesome";
        margin-right: 10px;
        margin-left: -17px; }
      #block-superfish-1 #superfish-1-accordion li.menuparent.sf-expanded > a.menuparent {
        font-weight: normal; }
        #block-superfish-1 #superfish-1-accordion li.menuparent.sf-expanded > a.menuparent:before {
          content: "\f0d7";
          font-family: "FontAwesome";
          margin-right: 10px;
          margin-left: -17px; }
      #block-superfish-1 #superfish-1-accordion li.menuparent > ul {
        padding-left: 10px;
        box-sizing: border-box; }
        #block-superfish-1 #superfish-1-accordion li.menuparent > ul > li:last-child {
          border-radius: 0px; }
          #block-superfish-1 #superfish-1-accordion li.menuparent > ul > li:last-child a {
            border-radius: 0px; }
      #block-superfish-1 #superfish-1-accordion li:nth-child(even) {
        background-color: #e6e6e6; }
      #block-superfish-1 #superfish-1-accordion li:last-child {
        border-radius: 0 0 10px 10px; }
        #block-superfish-1 #superfish-1-accordion li:last-child > a:last-child {
          border-radius: 0 0 10px 10px; }
      #block-superfish-1 #superfish-1-accordion li a {
        border: 0px;
        color: black;
        padding-left: 34px; }
        #block-superfish-1 #superfish-1-accordion li a:hover {
          background-color: #e9efcc; }
        #block-superfish-1 #superfish-1-accordion li a:focus {
          background-color: initial; }
  @media (min-width: 718px) and (max-width: 756px) {
    #block-superfish-1 {
      font-size: 12px; } }
  @media (min-width: 757px) and (max-width: 795px) {
    #block-superfish-1 {
      font-size: 13px; } }
  @media (min-width: 796px) and (max-width: 873px) {
    #block-superfish-1 {
      font-size: 14px; } }
  @media (min-width: 874px) and (max-width: 951px) {
    #block-superfish-1 {
      font-size: 16px; } }

#block-superfish-1 #logo img {
  width: 0px;
  transition: all 300ms cubic-bezier(0.165, 0.84, 0.44, 1); }
#block-superfish-1 #logo.animate img {
  width: 28px;
  margin-right: 0.5em; }
#block-superfish-1 #site-title {
  display: none;
  margin: 0;
  vertical-align: top;
  line-height: 1;
  transition: all 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
  text-indent: 300px;
  white-space: nowrap;
  box-sizing: content-box; }
  #block-superfish-1 #site-title.animate {
    display: inline-block;
    text-indent: 0;
    padding-right: 0.3em; }

body.maintenance-page {
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  background: transparent; }
  body.maintenance-page .l-page {
    max-width: 960px;
    background: #f5f5f5;
    padding: 2em 3em;
    box-sizing: border-box;
    border-radius: 10px;
    border: 2px solid #9bcb3b;
    text-align: center;
    box-shadow: 0px 0px 0px 2px rgba(245, 245, 245, 0.5); }
  body.maintenance-page .site-name {
    display: inline-block;
    font-family: 'Italianno', Georgia, "Times New Roman", Times, serif;
    font-size: 5em;
    font-style: normal;
    font-weight: normal;
    margin: 0; }
  body.maintenance-page .site-slogan {
    font-size: 1.2em;
    font-weight: normal;
    margin: 0 5.5em;
    font-style: italic; }
  body.maintenance-page .l-content {
    margin-bottom: 2em; }
    body.maintenance-page .l-content h1 {
      margin: 2em;
      text-transform: capitalize; }

/*
These style are to make video from a media field as responsive. The video fields are required to add 'wwm-video-responsive' in its field formatter settings.
*/
.page-user-edit #user-edit {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap; }
  .page-user-edit #user-edit div[class*="column"] {
    padding: 0.5em;
    -webkit-box-flex: 1;
        -ms-flex: 1 1 30%;
            flex: 1 1 30%; }

.page-user-edit #wwm-special-1,
.page-admin-people-create #wwm-special-1,
.page-user-register #wwm-special-1 {
  padding: 0 1em; }
.page-user-edit .form-item .clearfix,
.page-admin-people-create .form-item .clearfix,
.page-user-register .form-item .clearfix {
  width: 100%; }
.page-user-edit .form-type-radio,
.page-user-edit .form-type-checkbox,
.page-admin-people-create .form-type-radio,
.page-admin-people-create .form-type-checkbox,
.page-user-register .form-type-radio,
.page-user-register .form-type-checkbox {
  display: block; }
  .page-user-edit .form-type-radio input,
  .page-user-edit .form-type-checkbox input,
  .page-admin-people-create .form-type-radio input,
  .page-admin-people-create .form-type-checkbox input,
  .page-user-register .form-type-radio input,
  .page-user-register .form-type-checkbox input {
    width: auto; }
.page-user-edit input.form-radio,
.page-user-edit input.form-checkbox,
.page-admin-people-create input.form-radio,
.page-admin-people-create input.form-checkbox,
.page-user-register input.form-radio,
.page-user-register input.form-checkbox {
  display: block;
  float: left; }
.page-user-edit label.option,
.page-admin-people-create label.option,
.page-user-register label.option {
  display: block;
  margin-left: 25px;
  font-weight: normal;
  text-align: left; }
.page-user-edit input.field-add-more-submit,
.page-admin-people-create input.field-add-more-submit,
.page-user-register input.field-add-more-submit {
  text-transform: capitalize;
  margin: .5em auto 0;
  display: table; }
/* ... */

